fix icon spacing in nav

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2091,7 +2091,7 @@ input, select, textarea {
 			font-variant: normal;
 			text-rendering: auto;
 			line-height: 1em;
-			margin-top: 4px;
+			margin-top: 6px;
 			margin-bottom: 4px;
 			text-transform: none !important;
 			font-family: 'Font Awesome 5 Free';
